--- a/BioadresarAndroid/res/layout/list_item_layout.xml
+++ b/BioadresarAndroid/res/layout/list_item_layout.xml
@@ -42,8 +42,8 @@
                 android:layout_gravity="top"
                 android:layout_weight="0.1"
                 android:text="Large Text"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textColor="@color/White" />
+                android:textColor="@color/White"
+                android:textSize="16sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -82,8 +82,8 @@
                     android:layout_weight="0"
                     android:gravity="right"
                     android:text="Medium Text"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:textColor="@color/DimGray" />
+                    android:textColor="@color/DimGray"
+                    android:textSize="14sp" />
             </LinearLayout>
         </LinearLayout>
 
