--- a/BioadresarAndroid/res/layout/list_view.xml
+++ b/BioadresarAndroid/res/layout/list_view.xml
@@ -48,7 +48,8 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:enabled="false"
-                android:text="@string/next25" />
+                android:text="@string/next25"
+                android:textSize="16sp" />
         </LinearLayout>
     </ScrollView>
 
