--- a/BioadresarAndroid/res/layout/list_item_layout.xml
+++ b/BioadresarAndroid/res/layout/list_item_layout.xml
@@ -97,8 +97,8 @@
 
             <ImageView
                 android:id="@+id/imageView1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
                 android:layout_gravity="right"
                 android:src="@drawable/to_map_icon" />
         </LinearLayout>
