--- a/BioadresarAndroid/res/values/themes.xml
+++ b/BioadresarAndroid/res/values/themes.xml
@@ -3,6 +3,8 @@
 
     <style name="Theme.HnutiDuhaTheme" parent="Theme.Sherlock">
         <item name="actionBarStyle">@style/Widget.HnutiDuha.ActionBar</item>
+        <item name="searchViewSearchIcon">@drawable/search_icon</item>
+        <item name="searchDropdownBackground">@drawable/search_background_green</item>
     </style>
 
     <style name="Widget.HnutiDuha.ActionBar" parent="Widget.Sherlock.ActionBar">
