--- a/BioadresarAndroid/res/layout/list_view.xml
+++ b/BioadresarAndroid/res/layout/list_view.xml
@@ -21,6 +21,57 @@
     android:layout_height="fill_parent"
     android:background="@drawable/background" >
 
+    <LinearLayout
+        android:id="@+id/searchView"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/search_background_green" >
+
+        <include layout="@layout/search_view" />
+    </LinearLayout>
+
+    <ScrollView
+        android:id="@+id/listview"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_below="@id/searchView"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp" >
+
+        <!-- maybe this should be table -->
+
+        <requestFocus />
+
+        <LinearLayout
+            android:id="@+id/list_uber_layout"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:orientation="vertical" >
+
+            <LinearLayout
+                android:id="@+id/list_main_layout"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:orientation="vertical" >
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/next_25_button"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginLeft="0dp"
+                android:layout_marginRight="0dp"
+                android:enabled="false"
+                android:text="@string/next25"
+                android:textSize="16sp" />
+        </LinearLayout>
+    </ScrollView>
+
     <ProgressBar
         android:id="@+id/marker_progress"
         style="@android:style/Widget.ProgressBar.Small"
@@ -30,49 +81,5 @@
         android:layout_centerVertical="true"
         android:indeterminate="true"
         android:visibility="gone" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="10dp"
-        android:orientation="vertical" >
-
-        <include layout="@layout/search_view" />
-
-        <ScrollView
-            android:id="@+id/listview"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent" >
-
-            <!-- maybe this should be table -->
-
-            <requestFocus />
-
-            <LinearLayout
-                android:id="@+id/list_uber_layout"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:orientation="vertical" >
-
-                <LinearLayout
-                    android:id="@+id/list_main_layout"
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent"
-                    android:orientation="vertical" >
-                </LinearLayout>
-
-                <Button
-                    android:id="@+id/next_25_button"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginLeft="0dp"
-                    android:layout_marginRight="0dp"
-                    android:enabled="false"
-                    android:text="@string/next25"
-                    android:textSize="16sp" />
-            </LinearLayout>
-        </ScrollView>
-    </LinearLayout>
 
 </RelativeLayout>
