--- a/BioadresarAndroid/res/layout/list_view.xml
+++ b/BioadresarAndroid/res/layout/list_view.xml
@@ -21,7 +21,7 @@
     android:layout_height="fill_parent"
     android:background="@drawable/background" >
 
-    <LinearLayout
+    <cz.hnutiduha.bioadresar.view.SearchView
         android:id="@+id/searchView"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -29,10 +29,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:background="@drawable/search_background_green" >
-
-        <include layout="@layout/search_view" />
-    </LinearLayout>
+        android:background="@drawable/search_background_green" />
 
     <ScrollView
         android:id="@+id/listview"
